--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@nextui-org/user": "^2.0.34",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
