--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-compare": "^3.2.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
