--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/select": "^2.2.7",
+    "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/switch": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
