--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-fast-compare": "^3.2.2",
     "react-icons": "^5.3.0"
